fix verified
